CompilationManager back to Java 17
Signed-off-by: pizzi80 <paolo@given2.com>